Thu Sep 24 12:02:31 GMT 2015  Olly Betts <olly@survex.com>

	* examples/simpleexpand.cc,examples/simpleindex.cc,
	  examples/simplesearch.cc: '#include <config.h>' in the examples, as
	  when compiling with xlC on AIX, _LARGE_FILES gets defined by
	  AC_SYS_LARGEFILE to enable large file support, and defining this
	  changes the ABI of std::string, so it also needs to be defined when
	  compiling code using Xapian.

Mon Sep 14 00:40:28 GMT 2015  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Add missing '#include <arpa/inet.h>' to htons().
	  Seems to be implicitly included on most platforms, but Interix needs
	  it.  Reported by Eric Lindblad on xapian-discuss.

Wed Jun 03 03:12:25 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Fix to build when S_ISSOCK() isn't defined.

Mon Jun 01 11:42:11 GMT 2015  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_backend.cc: Fix
	  Database::get_doclength_lower_bound() over multiple databases when
	  some are empty or consist only of zero-length documents.  Previously
	  this would report a lower bound of zero, now it reports the same
	  lowest bound as a single database containing all the same documents.

Mon Jun 01 11:36:39 GMT 2015  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Avoid divide by zero when
	  getting the average length for an empty database.

Mon Jun 01 11:34:23 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: If command line option --verbose/-v
	  isn't specified, set the verbosity level from environmental variable
	  VERBOSE.

Mon Jun 01 11:33:19 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Put handling for XAPIAN_TESTSUITE_OUTPUT
	  environmental variable into its own block to contain the scope of
	  the temporary variables.

Mon Jun 01 11:29:25 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Prefer scalbn() to ldexp() where