@@ -1,3 +1,8 @@
+Thu Sep 24 05:47:19 GMT 2015  Olly Betts <olly@survex.com>
+
+	* tests/api_backend.cc: Tweak bounds checks in dbstats1 testcase
+	  - multi backends should give tight bounds.
+
 Thu Sep 24 12:02:31 GMT 2015  Olly Betts <olly@survex.com>
 
 	* examples/simpleexpand.cc,examples/simpleindex.cc,
